--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,17 +13,21 @@
     "@chakra-ui/react": "^2.4.8",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.5",
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
     "framer-motion": "^8.4.3",
     "frappe-react-sdk": "^1.0.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io-client": "^2.4.0"
+    "socket.io-client": "^2.4.0",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
   }
